--- a/index.html
+++ b/index.html
@@ -4,7 +4,7 @@
   <meta charset="UTF-8" />
   <meta name="viewport" content="width=device-width, initial-scale=1" />
   <title>Nikhila J — Portfolio</title>
-  <meta name="description" content="Portfolio of Nikhila J, an 11th-grade PCMC student at SEI Maruthu PU College." />
+  <meta name="description" content="Portfolio of Nikhila J, an 11th-grade PCMC student at SRI Maruthu PU College." />
   <style>
     :root {
       --bg:#0f1115;
@@ -82,7 +82,7 @@
         <div class="logo">NJ</div>
         <div class="brand-text">
           <h1 class="name">Nikhila J</h1>
-          <p class="tagline">11th Grade • PCMC • SEI Maruthu PU College</p>
+          <p class="tagline">11th Grade • PCMC • SRI Maruthu PU College</p>
         </div>
       </div>
       <nav class="nav">
@@ -195,7 +195,6 @@
         <h3>Contact</h3>
         <p>Email: <a href="mailto:jnikhila557@gmail.com">jnikhila557@gmail.com</a></p>
         <p>GitHub: <a href="https://github.com/Nikhila-verse" target="_blank">github.com/Nikhila-verse</a></p>
-        <p>LinkedIn: <em>Add your profile link here</em></p>
       </div>
     </section>
   </main>
@@ -208,3 +207,4 @@
   <script>document.getElementById('year').textContent=new Date().getFullYear();</script>
 </body>
 </html>
+
