--- a/index.html
+++ b/index.html
@@ -118,7 +118,7 @@
       <div class="container two-col">
         <div>
           <h3>About Me</h3>
-          <p>Hello! I’m <strong>Nikhila J</strong>, studying at <strong>SEI Maruthu PU College</strong> in the PCMC stream. I’m focused on academic excellence and growing my technical skills step by step.</p>
+          <p>Hello! I’m <strong>Nikhila J</strong>, studying at <strong>SRI Maruthu PU College</strong> in the PCMC stream. I’m focused on academic excellence and growing my technical skills step by step.</p>
         </div>
       </div>
     </section>
